Changed: color and size of color ball. Updated: Readme file

--- a/css/index.css
+++ b/css/index.css
@@ -25,13 +25,18 @@ header {
 }
 
 #button {
-  
-  background: linear-gradient(320deg, rgba(247,116,166,1) 14%, rgba(248,150,178,1) 29%, rgba(250,246,211,1) 52%, rgba(125,199,223,1) 76%, rgba(74,179,228,1) 100%);
-border-radius: 50%;
-border-style: solid;
-height: 50px;
-width: 50px;
-margin: auto;
-
-
+  background: linear-gradient(
+    320deg,
+    rgba(247, 116, 166, 1) 14%,
+    rgba(248, 150, 178, 1) 29%,
+    rgba(250, 246, 211, 1) 52%,
+    rgba(125, 199, 223, 1) 76%,
+    rgba(74, 179, 228, 1) 100%
+  );
+  border-radius: 50%;
+  border-style: solid;
+  height:65px;
+  width: 65px;
+  margin: auto;
+  cursor: pointer;
 }
