--- a/css/index.css
+++ b/css/index.css
@@ -61,17 +61,16 @@ main {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  width: 75%;
-  border: black solid 5px;
+  width: 50%;
+  /*border: black solid 5px;*/
 
   padding: 0.5rem;
   margin: 0 0 0 0;
-  background-color: black;
 }
 
 .aboutMeSection {
-  width: 25%;
-  border: black solid 5px;
+  width: 50%;
+  /*border: black solid 5px;*/
 
   padding: 2rem;
   margin: 0 0 0 0;
