--- a/css/index.css
+++ b/css/index.css
@@ -62,17 +62,21 @@ header {
   }
   40% {
     background: rgba(247, 116, 166, 1);
-    margin: auto;
+    margin: 0,5vh 0 20px 0;
   }
   45% {
     background: rgba(248, 150, 178, 1);
-    margin: 0px 0px 20px 0;
+    margin: 20px 0px 20px 0;
   }
   50% {
     background: rgba(250, 246, 211, 1);
-    margin: 20px 0px 0px 0;
+    margin: 0px 0px 0px 0;
   }
   60% {
+    background: rgba(250, 246, 211, 1);
+    margin: -10px 0px 0px 0;
+  }
+  70% {
     background: rgba(125, 199, 223, 1);
     margin: -20px 0 0px 0px;
   }
