--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,23 @@ header {
   }
 }
 
+
+
+/*.......Header : Navigation Menu.......*/
+
+.nav-bar {
+color: rgba(250, 246, 211, 1);
+font-size: 22px;
+list-style: none;
+
+
+}
+
+
+
+
+
+
 /*------Social Media---------*/
 
 .social {
