--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,18 @@ header {
     margin: auto;
     transform: rotateZ(180deg);
   }
+
+  30% {
+    background: linear-gradient(
+      320deg,
+      rgba(247, 116, 166, 1) 34%,
+      rgba(248, 150, 178, 1) 29%,
+      rgba(250, 246, 211, 1) 12%,
+    );
+    margin: 0,5vh 0 20px 0;
+    transform: rotate(20deg);
+  }
+
   40% {
     background: rgba(247, 116, 166, 1);
     margin: 0,5vh 0 20px 0;
@@ -91,7 +103,7 @@ header {
       
     );
     margin: auto;
-    
+    transform: rotate(-180deg);
   }
 }
 
