--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,10 @@ header {
   height: 100px;
   display: flex;
   justify-content: space-between;
+  position: -webkit-sticky; /* for Safari */
+  position: sticky;
+  top: 0;
+  align-self: flex-start; 
 
 }
 
