--- a/css/index.css
+++ b/css/index.css
@@ -19,11 +19,8 @@ header {
   position: -webkit-sticky; /* for Safari */
   position: sticky;
   top: 0;
-  align-self: flex-start; 
-
+  align-self: flex-start;
 }
-
-
 
 #button {
   background: linear-gradient(
@@ -40,15 +37,13 @@ header {
   width: 65px;
   margin: auto;
   cursor: pointer;
-  
 }
 
-#button:hover{
+#button:hover {
   transform: rotate(60deg);
 }
 
-#button:active{
-  
+#button:active {
   transform: translateY(10px) rotate(120deg);
 }
 
@@ -77,15 +72,15 @@ header {
       320deg,
       rgba(247, 116, 166, 1) 34%,
       rgba(248, 150, 178, 1) 29%,
-      rgba(250, 246, 211, 1) 12%,
+      rgba(250, 246, 211, 1) 12%
     );
-    margin: 0,5vh 0 20px 0;
+    margin: 0, 5vh 0 20px 0;
     transform: rotate(20deg);
   }
 
   40% {
     background: rgba(247, 116, 166, 1);
-    margin: 0,5vh 0 20px 0;
+    margin: 0, 5vh 0 20px 0;
   }
   45% {
     background: rgba(248, 150, 178, 1);
@@ -107,46 +102,43 @@ header {
     background: rgba(74, 179, 228, 1);
     margin: 20px 0 0px 0px;
   }
- 80% {
+  80% {
     background: linear-gradient(
       320deg,
-           
       rgba(250, 246, 211, 1) 52%,
-      rgba(125, 199, 223, 1) 16%,
-      
+      rgba(125, 199, 223, 1) 16%
     );
     margin: auto;
     transform: rotate(-180deg);
   }
 }
 
-
+@media (max-width: 600px) {
+  .ball {
+    animation-name: none;
+  }
+}
 
 /*.......Header : Navigation Menu.......*/
 
-.nav-bar li{
+.nav-bar li {
   display: inline-block;
- 
 }
 
-.nav-bar li a{
-color: rgba(250, 246, 211, 1);
-font-size: 22px;
-list-style: none;
-text-decoration: none;
-padding: 0.2rem;
-
-
-
+.nav-bar li a {
+  color: rgba(250, 246, 211, 1);
+  font-size: 22px;
+  list-style: none;
+  text-decoration: none;
+  padding: 0.2rem;
 }
 
-.nav-bar li a:hover{
-  text-decoration: underline  ;
+.nav-bar li a:hover {
+  text-decoration: underline;
 }
 
 .social {
   margin: 0 0 50px 0;
-  
 }
 
 .social img {
@@ -157,11 +149,6 @@ padding: 0.2rem;
   background-color: rgba(250, 246, 211, 0.55);
   border-radius: 10%;
 }
-
-
-
-
-
 
 /*----- Main Section: My Photo and About Me text ------*/
 main {
