--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,7 @@ header {
       320deg,
       rgba(247, 116, 166, 1) 34%,
       rgba(248, 150, 178, 1) 29%,
-      rgba(250, 246, 211, 1) 12%
+      rgba(250, 246, 211, 1) 12%,
     );
     margin: 0, 5vh 0 20px 0;
     transform: rotate(20deg);
@@ -106,7 +106,7 @@ header {
     background: linear-gradient(
       320deg,
       rgba(250, 246, 211, 1) 52%,
-      rgba(125, 199, 223, 1) 16%
+      rgba(125, 199, 223, 1) 16%,
     );
     margin: auto;
     transform: rotate(-180deg);
