--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,6 @@ html {
 
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 16px;
   margin: 0;
   background-color: rgba(250, 246, 211, 0.55);
 }
@@ -13,30 +12,27 @@ body {
 main {
   min-height: 500px;
   margin: 0 0 0 0;
-  
 }
 
 .about-me {
- 
   background-color: aqua;
- 
 }
 
 .about-me-image {
- 
-
- 
   background-color: yellow;
 }
 
-.about-me-image > img{
-  width: 400px;
+.about-me-image > img {
+  width: 500px;
+  border-radius: 10px;
 }
 
 .about-me-text {
-
- width: 50%;
   background-color: tomato;
+}
+
+.about-me-text > h3 {
+  text-align: center;
 }
 
 /* .figure {
