changed: pilates vector

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+/* pilates vectors
+https://photostockeditor.com/clip-art-vector/reformer-pilates */
+
 html {
   scroll-behavior: smooth;
 }
@@ -35,6 +38,6 @@ main {
   text-align: center;
 }
 
-/* .figure {
+.figure {
   width: 50%;
-} */
+}
