--- a/css/index.css
+++ b/css/index.css
@@ -27,37 +27,33 @@ main {
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
-  margin: 150px 0 0 0 ;
+  margin: 15em 0 0 0 ;
 }
 
 
 .about-me-image {
   
-  width: 40%;
+  width: 50%;
  
   
- 
- 
 }
 
 
 
 .my-image{
-  min-width: 70%;
-  max-width: 80%;
+  width: 100%;
   border-radius: 3%;
-  margin: 2em;
-
-
  
 }
+
 
 .about-me-side {
  
   /* background-color:blueviolet ; */
 width: 40%;
-font-size: 2em;
-margin: 2em;
+font-size: 0.9em;
+line-height: 1.5;
+
 }
 
 
@@ -78,7 +74,7 @@ margin: 2em;
   background-color: black;
   display: flex;
   justify-content: space-around;  
-  margin: 25vh 0;
+  margin: 20em 0;
  
 }
 
@@ -109,6 +105,12 @@ bottom: 30px;
 
 /*----- Main Section: My Videos ------*/
 
+
+.my-videos {
+  margin: 20em 0;
+}
+
+
 .my-videos h2 {
   margin: 2em;
 }
@@ -117,6 +119,8 @@ bottom: 30px;
  
   display: flex;
   justify-content: space-around;
+  margin:2%;
+  
 
 }
 
@@ -124,6 +128,7 @@ bottom: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+ 
   
 }
 
@@ -131,4 +136,5 @@ bottom: 30px;
 
 .my-videos-block span{
 font-size: 1.5rem;
+
 }
