--- a/css/index.css
+++ b/css/index.css
@@ -9,73 +9,47 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   background-color: rgba(250, 246, 211, 0.55);
-
 }
 
 main {
   margin: 0 0 0 0;
 }
 
-
-
-
-
 /*----- Main Section: My Photo and About Me text ------*/
-
 
 .about-me {
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
-  margin: 15em 0 0 0 ;
+  margin: 15em 0 0 0;
 }
-
 
 .about-me-image {
-  
   width: 50%;
- 
-  
 }
 
-
-
-.my-image{
+.my-image {
   width: 100%;
   border-radius: 3%;
- 
 }
-
 
 .about-me-side {
- 
   /* background-color:blueviolet ; */
-width: 40%;
-font-size: 0.9em;
-line-height: 1.5;
-
+  width: 40%;
+  font-size: 0.9em;
+  line-height: 1.5;
 }
-
-
 
 .about-me-text {
-
 }
-
-
-
-
-
-
 
 /*----- Main Section: Pilates system: 4 types / images ------*/
 
 .pilates-system {
   background-color: black;
   display: flex;
-  justify-content: space-around;  
+  justify-content: space-around;
   margin: 20em 0;
- 
 }
 
 .pilates-system img {
@@ -85,7 +59,7 @@ line-height: 1.5;
 
 .img-mat {
   position: relative;
-bottom: 30px;
+  bottom: 30px;
 }
 
 .img-mat-props {
@@ -105,36 +79,33 @@ bottom: 30px;
 
 /*----- Main Section: My Videos ------*/
 
-
 .my-videos {
   margin: 20em 0;
+  
 }
 
-
-.my-videos h2 {
-  margin: 2em;
-}
-
-.my-videos-block { 
- 
+.my-videos-block {
   display: flex;
   justify-content: space-around;
-  margin:2%;
-  
-
+  margin: 2%;
 }
 
 .my-video-item {
   display: flex;
+  max-width: 300px;
   flex-direction: column;
   align-items: center;
- 
-  
 }
 
+.my-video-item iframe {
+  height: 300px;
+}
 
+.my-videos h2 {
+margin: 2%;
 
-.my-videos-block span{
-font-size: 1.5rem;
+}
 
+.my-videos-block span {
+  font-size: 1.5rem;
 }
