added: animation delay 2s for the ball added: flexbox for about-me section

--- a/css/header.css
+++ b/css/header.css
@@ -44,6 +44,7 @@ header {
   animation-name: ball;
   animation-duration: 3s;
   animation-timing-function: ease-in;
+  animation-delay: 2s;
 }
 
 @keyframes ball {
