--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ main {
 /*----- Main Section: My Videos ------*/
 
 .my-videos {
-color: rgb(248, 247, 211);
+color: rgba(252, 195, 191, 1)
 }
 
 .my-videos-block {
