added: tap on button to be transparent

--- a/css/header.css
+++ b/css/header.css
@@ -38,6 +38,7 @@ header {
 
 #button:active {
   transform: translateY(10px) rotate(120deg) skewY(4deg);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .ball {
