--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,10 @@ header {
   align-self: flex-start;
 }
 
+a, button {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
 #button {
   background: linear-gradient(
     320deg,
