--- a/css/header.css
+++ b/css/header.css
@@ -121,13 +121,6 @@ a, button {
 
 
 
-@media (max-width: 600px) {
-  .ball {
-    animation-name: none;
-  }
-
-  
-}
 
 
 
@@ -179,4 +172,41 @@ a, button {
   background-color: rgba(250, 246, 211, 0.55);
   border-radius: 10%;
   padding: 0.1rem;
+}
+
+
+
+
+/* ---> Media Queries <--- */
+
+@media (max-width: 600px) {
+  
+  .ball {
+    animation-name: none;
+  }
+
+  #button {
+    height: 50px;
+    width: 50px;
+  }
+
+.social {
+  margin: 1.7rem 0.5rem 0 0;
+}
+
+
+  .social img {
+    height: 30px;
+    width: 30px;
+  }
+
+  ul {
+    padding: 0 0 0 0.5rem;
+  }
+  .nav-bar li a {
+   
+    font-size: 20px;
+    padding: 0.2rem;
+  }
+  
 }
