--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@ color: rgba(250, 246, 211, 1);
   }
 
   .about-me-image {
-    width: 60%;
+    width: 65%;
   }
   
   .my-image {
@@ -147,10 +147,14 @@ color: rgba(250, 246, 211, 1);
   }
   
   .about-me-side {
-    width: 60%;
+    width: 65%;
     line-height: 1.5rem;
-    font-size: 1.2em;
+    font-size: 1.5em;
    
+  }
+
+  .about-me-side h1 {
+    font-size: 1.9rem;
   }
 
   .about-me-text {
@@ -166,9 +170,7 @@ color: rgba(250, 246, 211, 1);
   
   .my-videos-block {
     flex-direction: column;
-    align-items: center;
-  
-   
+    align-items: center; 
   }
 
   .my-video-item {
@@ -205,7 +207,36 @@ color: rgba(250, 246, 211, 1);
     font-size: 1.2rem;
     
   }
+
+  
 }
 
+
+
+
 @media (max-width: 425px) {
+
+  .about-me-image {
+    width: 80%;
+  }
+  
+  .my-image {
+    width: 100%;
+    border-radius: 3%;
+  }
+  
+  .about-me-side {
+    width: 80%;
+    line-height: 1.5rem;
+    font-size: 1.4em;
+   
+  }
+
+  .about-me-side h1 {
+    font-size: 1.8rem;
+  }
+
+  .about-me-text {
+    text-align: left;
+  }
 }
