--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   background-color: rgba(250, 246, 211, 0.55);
+  overscroll-behavior: none;
 }
 
 main {
