--- a/css/header.css
+++ b/css/header.css
@@ -138,7 +138,7 @@ a, button {
 }
 
 .nav-bar li a {
-  color: rgba(250, 246, 211, 1);
+  color: rgb(255, 255, 243);
   font-size: 22px;
   list-style: none;
   text-decoration: none;
