--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,12 @@ https://photostockeditor.com/clip-art-vector/reformer-pilates */
 
 html {
   scroll-behavior: smooth;
+  
 
 }
 
 body {
+  background-color: rgb(0, 0, 0);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   overscroll-behavior: none;   /*to keep body from bouncing left/right on safari*/
@@ -24,6 +26,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+ 
 }
 
 .about-me-image {
@@ -50,6 +53,7 @@ main {
 .about-me-text {
   width: 100%;
   text-align: justify;
+  color: rgba(234, 255, 240, 0.95);
 }
 
 /*----- Main Section: Pilates system: 4 types / images ------*/
@@ -100,7 +104,7 @@ figure:hover > figcaption {visibility: visible;} */
 /*----- Main Section: My Videos ------*/
 
 .my-videos {
-color: rgba(250, 246, 211, 1);
+color: rgb(255, 255, 243);
 
 }
 
