--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(250, 246, 211, 0.55);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   overscroll-behavior: none;   /*to keep body from bouncing left/right on safari*/
@@ -53,7 +53,7 @@ main {
 .about-me-text {
   width: 100%;
   text-align: justify;
-  color: rgba(234, 255, 240, 0.95);
+ 
 }
 
 /*----- Main Section: Pilates system: 4 types / images ------*/
@@ -104,7 +104,7 @@ figure:hover > figcaption {visibility: visible;} */
 /*----- Main Section: My Videos ------*/
 
 .my-videos {
-color: rgb(255, 255, 243);
+color: rgba(250, 246, 211, 1);
 
 }
 
