--- a/css/index.css
+++ b/css/index.css
@@ -3,15 +3,13 @@ https://photostockeditor.com/clip-art-vector/reformer-pilates */
 
 html {
   scroll-behavior: smooth;
-  
-
 }
 
 body {
   background-color: rgba(250, 246, 211, 0.55);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
-  overscroll-behavior: none;   /*to keep body from bouncing left/right on safari*/
+  overscroll-behavior: none; /*to keep body from bouncing left/right on safari*/
 }
 
 main {
@@ -26,7 +24,6 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
- 
 }
 
 .about-me-image {
@@ -53,7 +50,6 @@ main {
 .about-me-text {
   width: 100%;
   text-align: justify;
- 
 }
 
 /*----- Main Section: Pilates system: 4 types / images ------*/
@@ -63,18 +59,52 @@ main {
   display: flex;
   justify-content: space-around;
   margin: 20em 0;
- 
 }
 
-.pilates-system img {
+.pilates-system > figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 10px;
   width: 20%;
+  /* border: solid 5px whitesmoke; */
+  /* border-radius: 50%; */
 }
 
+/* .pilates-system > figure:hover {
+font-size: 1.2rem;
+transform: rotateX(10deg);
+transform: rotateY(-5deg);
+transform: rotateZ();
+
+} */
+
+.pilates-system > figure > img {
+  width: 90%;
+  /* border: solid 5px whitesmoke; */
+  border-radius: 50%;
+}
+
+.pilates-system > figure > img:hover {
+  box-shadow: 1px 1px 60px whitesmoke;
+}
+
+.pilates-system > figure > figcaption {
+  text-align: center;
+  color: aliceblue;
+  margin: 3px;
+}
 
 .img-mat {
   position: relative;
   bottom: 30px;
+}
+
+.img-mat:hover {
+  font-size: 1.3rem;
+  transform: rotateX(10deg);
+  transform: rotateY(-5deg);
+  transform: rotateZ(333deg);
 }
 
 .img-mat-props {
@@ -82,9 +112,23 @@ main {
   top: 130px;
 }
 
+.img-mat-props:hover {
+  font-size: 1.3rem;
+  transform: rotateX(-20deg);
+  transform: rotateY(-15deg);
+  transform: rotateZ(15deg);
+}
+
 .img-reformer {
   position: relative;
   top: 35px;
+}
+
+.img-reformer:hover {
+  font-size: 1.3rem;
+  transform: rotateX(-10deg);
+  transform: rotateY(25deg);
+  transform: rotateZ(350deg);
 }
 
 .img-aerial {
@@ -92,20 +136,20 @@ main {
   bottom: 100px;
 }
 
+.img-aerial:hover {
+  font-size: 1.3rem;
+  transform: rotateX(30deg);
+  transform: rotateY(25deg);
+  transform: rotateZ(33deg);
+}
 
 /* figcaption {visibility: hidden;}
 figure:hover > figcaption {visibility: visible;} */
 
-
-
-
-
-
 /*----- Main Section: My Videos ------*/
 
 .my-videos {
-color: rgba(250, 246, 211, 1);
-
+  color: rgba(250, 246, 211, 1);
 }
 
 .my-videos-block {
@@ -121,16 +165,11 @@ color: rgba(250, 246, 211, 1);
   flex-direction: column;
   align-items: center;
   background-color: black;
- 
- 
 }
 
 .my-video-item iframe {
   height: 300px;
   color: rgba(250, 246, 211, 1);
-
- 
-
 }
 
 .my-videos h2 {
@@ -146,7 +185,6 @@ color: rgba(250, 246, 211, 1);
 /* -----> Media Queries <----- */
 
 @media (max-width: 1200px) {
-
   .about-me {
     flex-direction: column;
     align-items: center;
@@ -156,17 +194,16 @@ color: rgba(250, 246, 211, 1);
   .about-me-image {
     width: 65%;
   }
-  
+
   .my-image {
     width: 100%;
     border-radius: 3%;
   }
-  
+
   .about-me-side {
     width: 65%;
     line-height: 1.5rem;
     font-size: 1.5em;
-   
   }
 
   .about-me-side h1 {
@@ -176,17 +213,12 @@ color: rgba(250, 246, 211, 1);
   .about-me-text {
     text-align: left;
   }
-
 }
 
-
-
 @media (max-width: 992px) {
-
-  
   .my-videos-block {
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
   }
 
   .my-video-item {
@@ -198,7 +230,6 @@ color: rgba(250, 246, 211, 1);
   }
 
   .my-video-item iframe {
-    
   }
 
   .my-videos h2 {
@@ -207,10 +238,8 @@ color: rgba(250, 246, 211, 1);
 }
 
 @media (max-width: 768px) {
-
   .my-videos-block span {
     font-size: 1.3rem;
-    
   }
 
   .my-video-item {
@@ -218,34 +247,26 @@ color: rgba(250, 246, 211, 1);
   }
 }
 
-
-
 @media (max-width: 600px) {
   .my-videos-block span {
     font-size: 1.2rem;
-    
   }
-
-  
 }
 
-
 @media (max-width: 425px) {
-
   .about-me-image {
     width: 80%;
   }
-  
+
   .my-image {
     width: 100%;
     border-radius: 3%;
   }
-  
+
   .about-me-side {
     width: 80%;
     line-height: 1.5rem;
     font-size: 1.4em;
-   
   }
 
   .about-me-side h1 {
