--- a/css/index.css
+++ b/css/index.css
@@ -165,7 +165,15 @@ figure:hover > figcaption {visibility: visible;} */
   flex-direction: column;
   align-items: center;
   background-color: black;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4) ;
 }
+
+.my-video-item:hover {
+  border: solid 2px black;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4) ;
+}
+
+
 
 .my-video-item iframe {
   height: 300px;
