added: active states to pilates system figures

--- a/css/index.css
+++ b/css/index.css
@@ -67,21 +67,18 @@ main {
   align-items: center;
   margin: 10px;
   width: 20%;
-  /* border: solid 5px whitesmoke; */
-  /* border-radius: 50%; */
+  
 }
 
-/* .pilates-system > figure:hover {
-font-size: 1.2rem;
-transform: rotateX(10deg);
-transform: rotateY(-5deg);
-transform: rotateZ();
+.pilates-system > figure:active {
+font-size: 1.5rem;
+text-shadow: 2px 2px 30px whitesmoke;
 
-} */
+
+}
 
 .pilates-system > figure > img {
   width: 90%;
-  /* border: solid 5px whitesmoke; */
   border-radius: 50%;
 }
 
@@ -89,10 +86,16 @@ transform: rotateZ();
   box-shadow: 1px 1px 60px whitesmoke;
 }
 
+.pilates-system > figure > img:active{
+  transform: translateY(10px);
+  
+}
+
+
 .pilates-system > figure > figcaption {
   text-align: center;
   color: aliceblue;
-  margin: 3px;
+  margin: 4px;
 }
 
 .img-mat {
@@ -106,6 +109,7 @@ transform: rotateZ();
   transform: rotateY(-5deg);
   transform: rotateZ(333deg);
 }
+
 
 .img-mat-props {
   position: relative;
