--- a/css/index.css
+++ b/css/index.css
@@ -54,12 +54,18 @@ main {
 
 /*----- Main Section: Pilates system: 4 types / images ------*/
 
+h2 {
+  margin: 2%;
+}
+
 .pilates-system {
   background-color: black;
   display: flex;
   justify-content: space-around;
-  margin: 20em 0;
+  margin: 4em 0 20em 0;
 }
+
+
 
 .pilates-system > figure {
   display: flex;
@@ -228,6 +234,12 @@ figure:hover > figcaption {visibility: visible;} */
 }
 
 @media (max-width: 992px) {
+
+  h2 {
+    text-align: center;
+  }
+
+
   .my-videos-block {
     flex-direction: column;
     align-items: center;
@@ -241,15 +253,33 @@ figure:hover > figcaption {visibility: visible;} */
     margin: 5%;
   }
 
-  .my-video-item iframe {
-  }
-
-  .my-videos h2 {
+    .my-videos h2 {
     text-align: center;
   }
 }
 
 @media (max-width: 768px) {
+
+  .img-mat {
+    position: relative;
+    bottom: 30px;
+  }
+
+  .img-mat-props {
+    position: relative;
+    top: 100px;
+  }
+
+  .img-reformer {
+    position: relative;
+    top: 5px;
+  }
+
+  .img-aerial {
+    position: relative;
+    bottom: 80px;
+  }
+
   .my-videos-block span {
     font-size: 1.3rem;
   }
@@ -259,10 +289,48 @@ figure:hover > figcaption {visibility: visible;} */
   }
 }
 
+
 @media (max-width: 600px) {
+  .pilates-system {
+    flex-direction: column;
+    align-items: stretch;
+   }
+
+  .pilates-system > figure {
+    width: 35%;  
+  }
+
+  .img-mat {
+    align-self: flex-start;
+    left: 15px;
+    bottom: 30px;
+  }
+
+  
+  .img-mat-props {
+   align-self: center;
+   top: -90px;
+   right: 0px;
+   left: 65px;
+  }
+
+  .img-reformer {
+    align-self: flex-end;
+    top: -53px;
+    left: 0px;    
+  }
+
+  .img-aerial {
+   align-self: center;
+   bottom: 65px; 
+   right: 75px;
+  }
+
+
   .my-videos-block span {
     font-size: 1.2rem;
   }
+
 }
 
 @media (max-width: 425px) {
