--- a/css/index.css
+++ b/css/index.css
@@ -65,22 +65,17 @@ h2 {
   margin: 4em 0 20em 0;
 }
 
-
-
 .pilates-system > figure {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 10px;
   width: 20%;
-  
 }
 
 .pilates-system > figure:active {
-font-size: 1.5rem;
-text-shadow: 2px 2px 30px whitesmoke;
-
-
+  font-size: 1.5rem;
+  text-shadow: 2px 2px 30px whitesmoke;
 }
 
 .pilates-system > figure > img {
@@ -92,11 +87,9 @@ text-shadow: 2px 2px 30px whitesmoke;
   box-shadow: 1px 1px 60px whitesmoke;
 }
 
-.pilates-system > figure > img:active{
+.pilates-system > figure > img:active {
   transform: translateY(10px);
-  
 }
-
 
 .pilates-system > figure > figcaption {
   text-align: center;
@@ -115,7 +108,6 @@ text-shadow: 2px 2px 30px whitesmoke;
   transform: rotateY(-5deg);
   transform: rotateZ(333deg);
 }
-
 
 .img-mat-props {
   position: relative;
@@ -175,15 +167,13 @@ figure:hover > figcaption {visibility: visible;} */
   flex-direction: column;
   align-items: center;
   background-color: black;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4) ;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
 }
 
 .my-video-item:hover {
   border: solid 2px black;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4) ;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
 }
-
-
 
 .my-video-item iframe {
   height: 300px;
@@ -234,11 +224,9 @@ figure:hover > figcaption {visibility: visible;} */
 }
 
 @media (max-width: 992px) {
-
   h2 {
     text-align: center;
   }
-
 
   .my-videos-block {
     flex-direction: column;
@@ -253,13 +241,12 @@ figure:hover > figcaption {visibility: visible;} */
     margin: 5%;
   }
 
-    .my-videos h2 {
+  .my-videos h2 {
     text-align: center;
   }
 }
 
 @media (max-width: 768px) {
-
   .img-mat {
     position: relative;
     bottom: 30px;
@@ -289,15 +276,14 @@ figure:hover > figcaption {visibility: visible;} */
   }
 }
 
-
 @media (max-width: 600px) {
   .pilates-system {
     flex-direction: column;
     align-items: stretch;
-   }
+  }
 
   .pilates-system > figure {
-    width: 35%;  
+    width: 35%;
   }
 
   .img-mat {
@@ -306,31 +292,28 @@ figure:hover > figcaption {visibility: visible;} */
     bottom: 30px;
   }
 
-  
   .img-mat-props {
-   align-self: center;
-   top: -90px;
-   right: 0px;
-   left: 65px;
+    align-self: center;
+    top: -90px;
+    right: 0px;
+    left: 65px;
   }
 
   .img-reformer {
     align-self: flex-end;
     top: -53px;
-    left: 0px;    
+    left: 0px;
   }
 
   .img-aerial {
-   align-self: center;
-   bottom: 65px; 
-   right: 75px;
+    align-self: center;
+    bottom: 65px;
+    right: 75px;
   }
-
 
   .my-videos-block span {
     font-size: 1.2rem;
   }
-
 }
 
 @media (max-width: 425px) {
@@ -355,5 +338,43 @@ figure:hover > figcaption {visibility: visible;} */
 
   .about-me-text {
     text-align: left;
+  }
+
+
+  .pilates-system > figure {
+    width: 50%;
+  }
+
+  .pilates-system > figure {
+    font-size: 1.2rem;
+  }
+
+  .pilates-system > figure:active {
+    font-size: 1.7rem;
+  }
+
+  .img-mat {
+    align-self: flex-start;
+    left: 15px;
+    bottom: 30px;
+  }
+
+  .img-mat-props {
+    align-self: center;
+    top: -25px;
+    right: 0px;
+    left: 65px;
+  }
+
+  .img-reformer {
+    align-self: flex-end;
+    top: -30px;
+    left: -140px;
+  }
+
+  .img-aerial {
+    align-self: center;
+    bottom: 10px;
+    right: -70px;
   }
 }
