--- a/css/header.css
+++ b/css/header.css
@@ -25,7 +25,7 @@ a, button {
     rgba(248, 150, 178, 1) 29%,
     rgba(250, 246, 211, 1) 52%,
     rgba(125, 199, 223, 1) 76%,
-    rgba(74, 179, 228, 1) 100%
+    rgba(74, 179, 228, 1) 100%,
   );
   border-radius: 50%;
   border-style: solid;
