changed: animation keyframes for mobiles

--- a/css/header.css
+++ b/css/header.css
@@ -202,7 +202,23 @@ a, button {
         rgba(74, 179, 228, 1) 100%,
       );
       margin: auto;
+      
+    }
+
+       
+    
+    70% {
+      background: linear-gradient(
+        320deg,
+        rgba(247, 116, 166, 1) 14%,
+        rgba(248, 150, 178, 1) 29%,
+        rgba(250, 246, 211, 1) 52%,
+        rgba(125, 199, 223, 1) 76%,
+        rgba(74, 179, 228, 1) 100%,
+      );
+      margin: auto;
       transform: rotateZ(600deg);
+
     }
   }
  
