testing error with handlee font in iphone

--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ body {
 /* font-family: 'Indie Flower', cursive; */
 /* font-family: 'Manrope', sans-serif; */
 /* font-family: 'Sha  dows Into Light', cursive; */
-font-family: 'Handlee', cursive;
+font-family: 'Handlee', 'Indie Flower', cursive;
 /* font-family: 'Patrick Hand', cursive; */
 }
 
