--- a/css/index.css
+++ b/css/index.css
@@ -10,13 +10,13 @@ body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin: 0;
   overscroll-behavior: none; /*to keep body from bouncing left/right on safari*/
-  /* font-family: 'Balsamiq Sans', cursive; */
+  font-family: 'Balsamiq Sans', cursive;
 /* font-family: 'Caveat', cursive; */
 /* font-family: 'Didact Gothic', sans-serif; */
 /* font-family: 'Indie Flower', cursive; */
 /* font-family: 'Manrope', sans-serif; */
 /* font-family: 'Sha  dows Into Light', cursive; */
-font-family: 'Handlee', 'Indie Flower', cursive;
+/* font-family: 'Handlee', 'Indie Flower', cursive; */
 /* font-family: 'Patrick Hand', cursive; */
 }
 
