--- a/css/index.css
+++ b/css/index.css
@@ -16,8 +16,8 @@ body {
 /* font-family: 'Indie Flower', cursive; */
 /* font-family: 'Manrope', sans-serif; */
 /* font-family: 'Sha  dows Into Light', cursive; */
-/* font-family: 'Handlee', 'Patrick Hand', 'Indie Flower', cursive; */
-font-family: 'Patrick Hand', cursive;
+font-family: 'Handlee', 'Patrick Hand', 'Indie Flower', cursive;
+/* font-family: 'Patrick Hand', cursive; */
 }
 
 main {
@@ -62,7 +62,7 @@ main {
 
   font-family: 'Prompt', sans-serif;
   /* font-family: 'Quicksand', sans-serif; */
-  font-weight: 300;
+  /* font-weight: 300; */
   /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
 
 
