--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,8 @@ body {
 /* font-family: 'Sha  dows Into Light', cursive; */
 font-family: 'Handlee', 'Patrick Hand', 'Indie Flower', cursive;
 /* font-family: 'Patrick Hand', cursive; */
+/* font-family: 'Itim', cursive; */
+
 }
 
 main {
@@ -59,12 +61,14 @@ main {
   /* font-family: 'Didact Gothic', sans-serif; */
   /* font-family: 'Balsamiq Sans', cursive; */
 /* font-family: 'Manrope', sans-serif;/ */
-
-  font-family: 'Prompt', sans-serif;
+/* font-family: Arial, Helvetica, sans-serif; */
+  /* font-family: 'Prompt', sans-serif; */
   /* font-family: 'Quicksand', sans-serif; */
   /* font-weight: 300; */
   /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
-
+/* font-family: 'Indie Flower', cursive; */
+/* font-family: 'Itim', cursive; */
+font-family: 'Noto Sans', sans-serif;
 
 }
 
