--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ main {
 
 .about-me-side {
   width: 40%;
-  line-height: 1.5rem;
+  line-height: 2rem;
   font-size: 1.2em;
 }
 
@@ -61,14 +61,14 @@ main {
   /* font-family: 'Didact Gothic', sans-serif; */
   /* font-family: 'Balsamiq Sans', cursive; */
 /* font-family: 'Manrope', sans-serif;/ */
-/* font-family: Arial, Helvetica, sans-serif; */
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   /* font-family: 'Prompt', sans-serif; */
   /* font-family: 'Quicksand', sans-serif; */
   /* font-weight: 300; */
   /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
 /* font-family: 'Indie Flower', cursive; */
 /* font-family: 'Itim', cursive; */
-font-family: 'Noto Sans', sans-serif;
+/* font-family: 'Noto Sans', sans-serif; */
 
 }
 
