--- a/css/header.css
+++ b/css/header.css
@@ -182,6 +182,15 @@ a, button {
 
 /* ---> Media Queries <--- */
 
+@media (max-width: 1200px) {
+  .nav-bar li a {
+   
+    font-size: 24px;
+    padding: 0 4px 0 0  ;
+  }
+}
+
+
 @media (max-width: 600px) {
   
   .ball {
@@ -224,7 +233,7 @@ a, button {
  
 
 .social {
-  margin: 1.7rem 0.4rem 0 0;
+  margin: 1.7rem 1.5rem 0 0;
 }
 
 
@@ -234,11 +243,11 @@ a, button {
   }
 
   ul {
-    padding: 0 0 0 0.5rem;
+    padding: 0 0 0 1.6rem;
   }
   .nav-bar li a {
    
-    font-size: 18px;
+    font-size: 20px;
     padding: 0 4px 0 0  ;
   }
   
@@ -250,6 +259,14 @@ a, button {
   #button {
     height: 45px;
     width: 45px;
+  }
+
+  .social {
+    margin: 1.7rem 0.5rem 0 0;
+  }
+
+  ul {
+    padding: 0 0 0 0.6rem;
   }
 
 
