--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,7 @@ main {
 
 .about-me-image {
   width: 55%;
+  text-align: center;
 }
 
 .my-image {
@@ -391,7 +392,7 @@ figure:hover > figcaption {
   }
 
   .about-me-image {
-    width: 80%;
+    width: 85%;
   }
 
   .my-image {
