--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,22 @@ main {
   margin: 0 0 0 0;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+  padding-bottom: 2px;
+  border-bottom-style: solid;
+  border-bottom-width: 2.1px;
+  width: fit-content;
+}
+
+a:hover {
+  color: rgb(134,0,173);
+  border-bottom-width: 3.1px;
+}
+
+
+
 /*----- Main Section: My Photo and About Me text ------*/
 
 .about-me {
@@ -202,6 +218,30 @@ figure:hover > figcaption {
   text-align: center;
 }
 
+/* ---> Section: Contact Me <--- */
+
+.contact-me {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 4em 0 5em 0;
+}
+
+.contact-me > h1 > img {
+  width: 60px;
+  margin: 0 0 0 0;
+}
+
+.contact-me > h1 {
+  font-size: 2.5rem;
+}
+
+.contact-me > h1 > a {
+  font-size: 1.5rem;
+  padding: 10px;
+}
+
 /* -----> Media Queries <----- */
 
 @media (max-width: 1200px) {
@@ -284,7 +324,6 @@ figure:hover > figcaption {
 }
 
 @media (max-width: 768px) {
-
   h2 {
     margin: 12% 0 0 4%;
   }
@@ -327,7 +366,6 @@ figure:hover > figcaption {
 }
 
 @media (max-width: 600px) {
-
   h2 {
     margin: 25% 0 0 4%;
   }
@@ -337,7 +375,7 @@ figure:hover > figcaption {
   }
 
   .about-me-image {
-  width: 80%;
+    width: 80%;
   }
 
   .pilates-system {
@@ -379,14 +417,12 @@ figure:hover > figcaption {
     margin: 0 5% 15% 5%;
   }
 
-
   .my-videos-block span {
     font-size: 1.2rem;
   }
 }
 
 @media (max-width: 425px) {
-
   h2 {
     margin: 30% 0 0 4%;
   }
@@ -451,7 +487,7 @@ figure:hover > figcaption {
     right: -70px;
   }
 
-  .my-video-item{
+  .my-video-item {
     width: 90%;
   }
 }
