--- a/css/index.css
+++ b/css/index.css
@@ -228,16 +228,23 @@ figure:hover > figcaption {
 
 .contact-me img {
   width: 60px;
+  margin: 0 0 3% 0;
+}
+
+.contact-me h1, .contact-me-a h1 {
+  font-size: 2.5rem;
   margin: 0 0 0 0;
 }
 
-.contact-me h1 {
-  font-size: 2.5rem;
+.contact-me-a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.contact-me a {
+.contact-me-a a {
   font-size: 1.5rem;
-  padding: 10px;
+ padding: 15px;
 }
 
 /* -----> Media Queries <----- */
@@ -373,7 +380,7 @@ figure:hover > figcaption {
   }
 
   .about-me-image {
-    width: 80%;
+    width: 90%;
   }
 
   .pilates-system {
@@ -424,14 +431,19 @@ figure:hover > figcaption {
     justify-content: center;
   }
 
-  .contact-me > h1 {
+  .contact-me h1, .contact-me-a h1  {
     font-size: 2rem;
+    padding: 1em 0 0.5em 0;
   }
 
-  .contact-me > h1 > a {
-    font-size: 1rem;
-    padding: 10px;
+  .contact-me-a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
+
+  
 }
 
 @media (max-width: 425px) {
@@ -503,12 +515,9 @@ figure:hover > figcaption {
     width: 90%;
   }
 
-  .contact-me > h1 {
-    font-size: 0.9rem;
+  .contact-me h1, .contact-me-a h1  {
+    font-size: 1.5rem;
+    padding: 1em 0 0.5em 0;
   }
 
-  .contact-me > h1 > a {
-    font-size: 0.9rem;
-    padding: 10px;
-  }
 }
