--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ main {
   margin: 0 0 0 0;
 }
 
-a {
+main a {
   color: black;
   text-decoration: none;
   padding-bottom: 2px;
@@ -517,7 +517,10 @@ figure:hover > figcaption {
 
   .contact-me h1, .contact-me-a h1  {
     font-size: 1.3rem;
-    padding: 1em 0 0.5em 0;
+    padding: 1em 0 0.8em 0;
   }
+
+  .contact-me-a a  {
+    font-size: 1.1rem;
 
 }
